
+---------------------------+
| KNOWN BUGS                |
+---------------------------+

	* crytical warning when unloading the plugin
	* show/hide hidden files not working on Windows


+---------------------------+
| TODO                      |
+---------------------------+

	(DONE) codestyle improve to be same as other parts as geany`s
	(DONE) configuration dialog
	(DONE) tracking path to current focused document (work only for refreshed directories)
	* Better tracking for files, open path to them
	* In windows can choice between devices (C:\, D:\,...)
	* Windows compitable
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

17-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added option to hide object files *.so;*.obj;*.so;*.dll;*.a;*.lib
		fixed a few warnings


14-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		strings cleanup
		(This is version 0.2, because the plugin become 2 months old :)


11-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug when turned off "On expand refresh"
		fixed runtime crytical warnings reported in http://nopaste.geany.org/p/m3f018a3e
			and thanks to Enrico for help with gdb :)
		added empty element when directory not filled, and changed default option values
			for "On expand refresh"


10-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed wrong root refresh on delete and create when objects are in toplevel
		some string changed in prefs dialog